objects/FSLABB_ServiceOrderNotification__e.object
<CustomObject>
    <description>FSL US3169 Update of Work Order Line Item or Service Appointment notifies SAP to update Service Order.</description>
    <fields>
        <fullName>FSLABB_RecordEntity__c</fullName>
        <description>FSL US3169 The SAP system this record is related to.</description>
        <label>Record Entity</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSLABB_RecordId__c</fullName>
        <description>The Id of the record that triggered the update.</description>
        <label>Record Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSLABB_SAPId__c</fullName>
        <description>The SAP Id (Service Order, Operation) to be updated.</description>
        <label>SAP Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSLABB_SAPSystem__c</fullName>
        <description>FSL US3169 The SAP system this record is related to.</description>
        <label>SAP System</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>FSL Service Order Notification</label>
    <pluralLabel>FSL Service Order Notifications</pluralLabel>
</CustomObject>